# BioPhys-Bridge

./: .env.example  .gitignore  CITATION.cff  LICENSE  LICENSE-DATA  Makefile  README.md  pyproject.toml
configs/: evaluation.yaml  extraction.yaml  mineru.yaml  sources.yaml
data/release/: README.md  biophys_bridge_metadata.json  biophys_bridge_schema.json
data/samples/: sample_cases.jsonl
reports/: appendix_10_complete_samples.md  appendix_10_complete_samples_zh.md  competition_submission_checklist.md  dataset_card.md  technical_report.md  technical_report_zh.md
results/aggregate/: agent_eval_lexical_retrieval_baseline_500_20260531.json  (+1 more)
scripts/: run_mineru_api.py
src/biophysevo/: __init__.py  validate.py  (+1 more)
tests/: conftest.py  test_agent_eval.py  test_biological_mechanism_required.py  test_build_case_with_llm_fields.py  test_build_cases_cli_llm.py  test_checkpoints.py  test_data_card.py  test_domain_bridge_compatibility.py  test_enrich_case.py  test_enrich_cases_cli.py  test_eval_modes.py  test_evidence_required.py  test_evidence_text_blocks.py  test_extraction.py  test_llm_fill.py  test_mineru.py  test_model_family_schema.py  test_no_duplicate_case_ids.py  test_no_duplicates.py  test_normalize_cli.py  test_physical_interpretation_required.py  test_physical_model_required.py  test_physics_consistency.py  test_quality.py  test_release.py  test_sample_cases_validate.py  test_scale200_sources.py  test_schema.py  test_sci_evo_builder_domains.py  test_sci_evo_view.py  test_smoke_eval_isolation.py  test_units.py  test_validate_evidence.py  test_validate_schema.py
(+38 files in other folders)
