[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biophysevo"
version = "0.1.0"
description = "Biophys-Bridge: a physics-grounded Sci-Evo dataset (Sci-Evo subtype) connecting physical models, quantitative evidence, and biological mechanism interpretation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Qingyang Xu" }]
dependencies = [
    "pydantic==2.13.4",
    "jsonschema==4.26.0",
    "pyyaml==6.0.3",
    "pint==0.25.3",
    "requests==2.34.2",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
llm = [
    "openai==1.30.5",
    "anthropic==0.30.1",
]
hf = [
    "datasets==2.21.0",
]
dev = [
    "pytest==8.4.2",
    "pytest-cov==5.0.0",
]

[project.scripts]
biophysevo-validate = "biophysevo.validate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
biophysevo = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
